k8s/caos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caos
  template:
    metadata:
      labels:
        app: caos
    spec:
      containers:
        - name: caos
          image: fabricioveronez/simulador-do-caos
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: caos
spec:
  selector:
    app: caos
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
